# serializer version: 1
# name: test_acquire
  dict({
    'acquired': True,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'foo',
    'key': 'key',
    'ping': dict({
      'pinged_at': datetime.datetime(2015, 10, 6, 20, 0),
    }),
    'progress': 3,
    'retries': 0,
    'stage': None,
    'state': <JobState.PREPARING: 'preparing'>,
    'status': list([
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': <JobState.PREPARING: 'preparing'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_acquire.1
  dict({
    '_id': 'foo',
    'acquired': True,
    'archived': False,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'key': 'hashed',
    'ping': dict({
      'pinged_at': datetime.datetime(2015, 10, 6, 20, 0),
    }),
    'rights': dict({
    }),
    'state': 'preparing',
    'status': list([
      dict({
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_cancel
  dict({
    'acquired': False,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'foo',
    'ping': None,
    'progress': 0,
    'retries': 0,
    'stage': 'foo',
    'state': <JobState.RUNNING: 'running'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': 'foo',
        'state': <JobState.RUNNING: 'running'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_cancel.1
  dict({
    '_id': 'foo',
    'archived': False,
    'args': dict({
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'rights': dict({
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0.33,
        'stage': 'foo',
        'state': 'running',
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: test_create[None]
  dict({
    'acquired': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'bf1b993c',
    'ping': None,
    'progress': 0,
    'retries': 0,
    'stage': None,
    'state': <JobState.WAITING: 'waiting'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[None].1
  dict({
    '_id': 'bf1b993c',
    'acquired': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[bar]
  dict({
    'acquired': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 'bar',
    'ping': None,
    'progress': 0,
    'retries': 0,
    'stage': None,
    'state': <JobState.WAITING: 'waiting'>,
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'create_sample',
  })
# ---
# name: test_create[bar].1
  dict({
    '_id': 'bar',
    'acquired': False,
    'args': dict({
      'sample_id': 'foo',
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'create_sample',
  })
# ---
